2010-06-30  Sancho lerena <slerena@artica.es>

	* extras: Added a few specific specs for Redhat/CentOS linux
	plattform (different from SUSE rpm specs).

2010-06-02  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Fixed parameter check. Make sure
	  develop_bypass is set to 1.

2010-05-24  Ramon Novoa  <rnovoa@artica.es>

	* pandora_update_version.sh: Added to repository. Script to
	  automatically update Pandora FMS version and build where
	  necessary.

2010-05-21  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh: Get the right version for the keygen.

2010-05-20  Ramon Novoa  <rnovoa@artica.es>

	* build_src.sh, build_deb.sh, build_rpm.sh: Added to repository. 
	  Sancho's newest build scripts.
	
	* build_rpm_packages.sh: Removed from repository. Old build script.

2009-12-18 Sancho lerena <slerena@gmail.com>

	* extras/aditional_rpmspec/xprobe2-0.3.spec: Updated to make it
	compatible with SUSE build service.

	* extras/aditional_rpmspec/wmic-4.0.0tp4-SVN-build-UNKNOWN.spec: Final
	changes (updated web, license and description).

2009-12-09  Sancho Lerena <slerena@gmail.com>

	* * aditional_rpmspec/xprobe2-0.3.spec: Fixed parameter to avoid FHS
	enforcing on SUSE Build Service.

2009-12-08   Sancho lerena <slerena@gmail.com>

	* aditional_sources: Added directory to put there sources of
	modified packages used in Pandora FMS.

	* aditional_sources/xprobe_0.3: Patched version to compile with gcc4.x
	and used to do SUSE RPM packages for 11.x

	* aditional_rpmspec/xprobe2-0.3.spec: Added spec for xprobe2 (SUSE and RH).

2009-11-11   Sancho Lerena <slerena@artica.es>

	* tentacle_proxy: Upgrade to support a previous check of connectiviy
	before trying to copy nothing to up server.

	* generic_daemon_launcher: A generic script used to launch other 
	apps/scripts as daemons. Could be used with tentacle_proxy, daemon_watchdog
	a secondary pandora_agent or pandora_server instance, for example.
